2010-04-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/generic.h: Remove dangerous loop iterator
	after calling erase(), found by cppcheck.

	* include/openbabel/depict/painter.h: Add virtual destructor to
	remove warning.

	* src/formats/xtcformat.cpp: Remove minor memory leak found by
	cppcheck.

	* src/formats/fastsearchformat.cpp: Remove minor memory leak found
	by cppcheck.

	* src/ops/sort.cpp: Remove minor compile warning by GCC.

	* data/element.h, data/atomtyp.h: Regenerate. Need to add CMake
	targets for these.

2010-04-10  Chris Morley

	* CMakeLists.txt: ensure output compression not enabled for MSVC
	(as for previous build system).

	* src/CMakeLists.txt: remove ops.cpp (which had nothing useful left
	in it) and add xout.cpp. Add plugin_charges obf project for MSVC.
	
	* windows-vc2008/Distribution/NSISScriptToCreateInstaller.nsi:
	add doc folder; delete MS distributables installer when it has been
	run; add sdf.bat; add obdepict.bat and put on context menu;
	add firefox	to path so GUI and obdepict can use it.
	
	* src/GUI/OBGUI.cpp,src/GUI/OBGUI.h: add optional display of
	chemical structures in firefox (or other external program),
	using a new op xout.

	* windows-vc2008/Distribution/NSISScriptToCreateInstallerOBF.nsi
	deleted
	
2010-04-09  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/partialcharge.h, src/partialcharges.cpp,
	src/charges/: New plugin type to assign partial charges. First
	examples are MMFF94 and Gasteiger. Nothing new, but more to come.

2010-04-07  Chris Morley

	* src/formats/fingerprintformat.cpp: add option to output
	hexadecimal fingerprints only, as requested by Francesco Napolitano. 

2010-04-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/dlhandler_unix.cpp (findFiles): Don't split on tabs or
	spaces. These are legal characters for directories. (This causes
	problems with Mac users in particular.)

2010-04-04 Chris Morley
